...
        <!-- Universal Lobby -->
        <RelativeLayout
            android:id="@+id/game_lobby_universal_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                        <TextView
                            android:id="@+id/game_lobby_max_players_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
        <!-- Joiner Lobby -->
        <RelativeLayout
            android:id="@+id/game_lobby_joiner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
        <!-- Owner Lobby -->
        <RelativeLayout
            android:id="@+id/game_lobby_owner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/game_lobby_owner_edit_image"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
...

                    <ImageView
                        android:id="@+id/game_lobby_owner_start_image"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
...
        <!-- Edit -->
        <RelativeLayout
            android:id="@+id/game_lobby_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                        <ImageView
                            android:id="@+id/game_lobby_edit_image_question_count"
                            android:layout_width="0dp"
                            android:layout_weight="1"
...

                        <ImageView
                            android:id="@+id/game_lobby_edit_image_max_players"
                            android:layout_width="0dp"
                            android:layout_weight="1"
...

                        <TextView
                            android:id="@+id/game_lobby_edit_label_max_players"
                            android:layout_width="0dp"
                            android:layout_weight="5"
...

                <ImageView
                    android:id="@+id/game_lobby_edit_back_image"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
...
        <!-- Countdown -->
        <RelativeLayout
            android:id="@+id/game_countdown_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
        <!-- Question -->
        <RelativeLayout
            android:id="@+id/game_question_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                        <ImageView
                            android:id="@+id/game_question_answer1_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <ImageView
                            android:id="@+id/game_question_answer2_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <ImageView
                            android:id="@+id/game_question_answer3_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <ImageView
                            android:id="@+id/game_question_answer4_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
        <!-- Stall -->
        <RelativeLayout
            android:id="@+id/game_stall_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
        <!-- Scoreboard -->
        <RelativeLayout
            android:id="@+id/game_scoreboard_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/game_scoreboard_leave_image"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
...
