...
    <string name="gameHeaderLobby">Lobby</string>
    <string name="gameHeaderEdit">Edit Room</string>
    <string name="gameHeaderQuestion">Q%1$d</string>
    <string name="gameTimer">%1$.1f</string>
    <string name="scoreboardPoints">+%1$d</string>

    <string name="editMaxPlayersTitle">Select Max Players</string>

    <string name="help_title">Powerup &amp; Score Help</string>

    <string name="fifty_fifty">Description for Fifty-fifty feature...</string>
    <string name="desc_fifty_fifty">Fifty-fifty: Removes two incorrect answers.</string>

...
