...
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/playText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/playButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-5dp"
            android:fontFamily="@font/quantico_regular"
            android:text="PLAY!"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
...
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp">

            <!-- Create Button -->

            <ImageView
                android:id="@+id/createButton"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_alignTop="@id/codeButton"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/accountButton"
                android:clickable="true"
...
